# jarvis-ratatui-term

./: Cargo.toml  README.md
src/: main.rs  post.sh
