[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
clipboard = "0.5.0"
crossterm = "0.29.0"
dotenv = "0.15.0"
futures = "0.3.31"
ratatui = "0.29.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
